--- a/contact.html
+++ b/contact.html
@@ -1,2 +1,3 @@
-<h1>this is contact page<h1>
-<h2>contact no: 9000000000<h2>
+<h1>this is contact page</h1>
+<h2>contact no: 9000000000</h2>
+<h2>email id: itsnotme@nomail.com</h2>
